gcc/testsuite/rust/rustc/ui/error-codes/E0137.rs
#![feature(main)]

#[main]
fn foo() {}

#[main]
fn f() {}
// { dg-error ".E0137." "" { target *-*-* } .-1 }

